--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/orpca/u513a" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/orpca/p11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/orpca/o12d" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/orpca/l8e" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/orpca/t4i" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/orpca/e12e" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/orpca/r3n" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/orpca/e10z" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/orpca/c9h" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/orpca/j7o" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/orpca/l5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/bzrgsjnqn/j513n" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/w11g" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/n12f" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/s8s" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/n4t" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/v12n" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/b3x" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/w10c" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/p9p" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/bzrgsjnqn/s7l" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/bzrgsjnqn/t5h" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg"><p align="center">【最新疫情7.9】香港出现第三波感染</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】香港出现第三波感染""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
@@ -13,17 +13,18 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1" title="中芯国际股价暴涨暴跌 中共撒钱难掩窘境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-55920462-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1" title="【一线采访】贵州铜仁山体滑坡 村庄被埋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_1400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239966.md#1">任正非“血腥”管理模式引起FBI局长注意</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237825.md#1">【翻墙必看】李克强考察贵州时又泄密</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239406.md#1">美官员欲访台 中共会做什么？FBI揭秘</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240201.md#1">湖北水库滑动变形 近2.9万民众急撤</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240429.md#1">【翻墙必看】中共在美国“猎狐”真相曝光</a><br>
@@ -41,22 +42,22 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,549,680 人
+!共 359,549,892 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242684.md#1">王友群：中共正处在最后解体的前夜</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242681.md#1">【新闻看点】A股飙升内幕 金融战下的布局？</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242490.md#1">【一线采访】北京大兴再现确诊病例 官方隐瞒</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242765.md#1">被捕香港大纪元员工：遭警威胁送中活摘</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243256.md#1">湖北官员廖明国在荆门市老市委大院坠亡</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242490.md#1">【一线采访】北京大兴再现确诊病例 官方隐瞒</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243557.md#1">陈思敏：公安系统3人同日落马 赵乐际要当心</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241971.md#1">华云：谈“纽约时报”诋毁翻墙软件</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243256.md#1">湖北官员廖明国在荆门市老市委大院坠亡</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12240040.md#1">中共强推港版国安法 触发中国人退党</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243001.md#1">【拍案惊奇】习政敌谋划溃坝？中共猎狐打异己</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242067.md#1">澳留学生亮相反共后 遭死亡威胁</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242979.md#1">【翻墙必看】美制裁中共有两个核弹级选项</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243557.md#1">陈思敏：公安系统3人同日落马 赵乐际要当心</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241972.md#1">乐视退市 中国半个娱乐圈明星血本无归</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241993.md#1">涉诱奸多名学生 广东一小学老师被家长群殴</a><br>
@@ -106,17 +107,17 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12231629.md#1">【拍案惊奇】酷吏进港掌国安 港现“维权律师”</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/4/n12231677.md#1">暴雨持续 长江流域发洪水 近两千万人受灾</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqudue369/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/1-16-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：帮助营救</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241411.md#1">宁夏永宁县8位法轮功学员面临非法庭审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242078.md#1">【现场视频】包头市中院剥夺律师参加庭审权利</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1NK3DO-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242038.md#1">中国飞鹤被揭虚报收支 8个月涉两次造假</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/1210291432372519-600x400-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241942.md#1">林郑失宠？警务处处长成中共镇压香港要员</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241830.md#1">彭定康：中共在摧毁香港 西方应联手抵制</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243056.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/2-11-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243056.md#1">湖北江西现河堤溃口 千岛湖泄洪量达76个西湖</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/1-16-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242955.md#1">纪念709大抓捕五周年 各界关注港版国安法</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242651.md#1">马振宇苏州监狱遭酷刑 美议员：帮助营救</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241411.md#1">宁夏永宁县8位法轮功学员面临非法庭审</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242078.md#1">【现场视频】包头市中院剥夺律师参加庭审权利</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242090.md#1">709大抓捕五周年 中共从未停止打压律师</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1NK3DO-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243607.md#1">美联航和美航再次暂停飞往香港的航班</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243066.md#1">陆养猪企业招聘2.5万大学生 安排在一线猪场</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242706.md#1">北京写字楼空置率创近十年新高</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242099.md#1">惩罚中共瞒疫 川普：禁TikTok是选择之一</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242331.md#1">印度新款“检测中国App”程序上架爆红</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242038.md#1">中国飞鹤被揭虚报收支 8个月涉两次造假</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1216521652-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12227709.md#1">美国加速与中俄的太空军事竞赛</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242549.md#1">不满ICE新规 纽约高校表态帮助国际学生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242263.md#1">蓬佩奥：世卫组织未能履行其基本职能</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241942.md#1">林郑失宠？警务处处长成中共镇压香港要员</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241830.md#1">彭定康：中共在摧毁香港 西方应联手抵制</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241335.md#1">传奇的“自由中国号”台湾亮相 历经百年波折</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243056.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/2-11-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243056.md#1">湖北江西现河堤溃口 千岛湖泄洪量达76个西湖</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242969.md#1">广汉花炮厂爆炸6人受伤 7100余人被疏散</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241562.md#1">廖远：大禹治水与三峡工程防洪失败</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242486.md#1">蓬佩奥：病毒大流行让全球看清中共真面目</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240453.md#1">【疫情中的纽约人】有争议的抗病毒配方</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12242174.md#1">四川广汉鞭炮厂爆炸 上空腾出蘑菇云</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/12-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243214.md#1">广州多家华为手机店诱骗顾客预存电话费后“倒闭”</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241847.md#1">河北一公司老板融资被重判 15亿资产遭抢占</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240267.md#1">每日三退声明精选（2020/07/07）</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236618.md#1">组图：街头为家 北京疫情下的艰难民生</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236965.md#1">女子偷新生儿判1年10月 网友：鼓励犯罪</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/07/Unknown-320x200.jpg"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239849.md#1">组图：高考前夕 学校孔子牛顿像前堆满供品</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239233.md#1">美开学新政策 37万中国留学生忧心忡忡</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12237952.md#1">【视频】高考首日 安徽歙县因洪涝取消两科考试</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235290.md#1">大陆高考7日登场 疫情以来最大规模集体活动</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12228726.md#1">耍赖拒付韩国版权费 大陆综艺节目被强制赔偿</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12229468.md#1">山东菏泽校长之子11岁起领工资 档案涉伪造</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12226681.md#1">监控民众不力 河北两商场遭中共内部通报</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/25/n12210635.md#1">【独家】鲁炜发迹和中国“删都”的出现</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/30/n12222018.md#1">病毒传播复杂多样 北京急查疫情溯源</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/29/n12219261.md#1">【内幕】关联北京疫情 河北大规模检测背后</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/27/n12216091.md#1">【内幕】六常委分歧 习决意暂不与美签约</a><br>
-<br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12140713.md#1">【中国礼仪文化】见面礼仪之叉手礼</a><br>
+<br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233581.md#1">天人感应现象 奇石空山叫 神石藏字</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12140713.md#1">【中国礼仪文化】见面礼仪之叉手礼</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235533.md#1">“里”怎样开创华夏文化？古人如何步测里程？</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236041.md#1">“真善忍好”冲散疫情中的恐惧和烦恼</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">绘画中的瘟疫——罪与罚的故事（一）</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12234362.md#1">《诗经》里的伯劳鸟</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/oqudue369/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
